--- a/src/pages/landing/product.astro
+++ b/src/pages/landing/product.astro
@@ -5,7 +5,7 @@ import Hero from '~/components/widgets/Hero.astro';
 import CallToAction from '~/components/widgets/CallToAction.astro';
 
 const metadata = {
-  title: 'Product Details Landing Page Demo',
+  title: 'Product Details Landing Page Demo'
 };
 ---
 
